Add heartbeat to messages sent over streams
